[gd_scene load_steps=2 format=3 uid="uid://cd55mvqlxsall"]

[ext_resource type="Script" uid="uid://b2evoe4nbh7n3" path="res://scenes/ui/pause_menu.gd" id="1_6tw0m"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tw0m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -74.0
offset_right = 70.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="BResume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BOptions" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="BRestart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="BQuitToMenu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to menu"

[node name="BQuitToDesktop" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to desktop"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BResume" to="." method="_on_b_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BOptions" to="." method="_on_b_options_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BRestart" to="." method="_on_b_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BQuitToMenu" to="." method="_on_b_quit_to_menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BQuitToDesktop" to="." method="_on_b_quit_to_desktop_pressed"]
